<resources>
    <string name="app_name">Dart</string>

    <!-- Page Connexion -->
    <string name="PageConnexion">Page de Connexion</string>
    <string name="back_btn">Bouton Retour</string>
    <string name="loginEmail">Email</string>
    <string name="MDP">Mot de passe</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">Connexion</string>
    <string name="NoAccount">Pas encore de compte ?</string>
    <string name="ForgotPassword">Mot de passe oublié</string>
    <string name="descLogoDart">Image logo Dart</string>
    <string name="descEmail">Image mail</string>
    <string name="descLock">Image cadenas</string>

    <!-- Page Creation Compte -->
    <string name="createAccountText">Création d\'un compte</string>
    <string name="NomUtilisateur">Nom d\'utilisateur</string>
    <string name="conditionsUtilisations">En vous inscrivant, vous acceptez les <u>Conditions d\'utilisation</u> de l\'application et la <u>Politique de confidentialité.</u></string>
    <string name="createAccount">Créer un compte</string>

    <!-- Page Forgot Pwd -->
    <string name="typeEmail">Saisissez votre adresse email pour réinitiailiser votre mot de passe.</string>
    <string name="sendButtonText">Envoyer</string>

    <!-- Page Compte (Parametres) -->
    <string name="titreCompte">Mon Compte</string>
    <string name="Deconnexion">Deconnexion</string>
    <string name="SupprCompte">Supprimer le compte</string>
    <string name="Email">Adresse mail</string>
    <string name="Pseudo">Pseudo</string>
    <string name="descStylo">Image de stylo</string>
    <string name="descUser">Image de profil</string>

    <!-- Activite bottom_menu (gestion de la bottom bar) -->
    <string name="Menu">Menu</string>
    <string name="Historique">Historique</string>
    <string name="Statistiques">Statistiques</string>
    <string name="Parametres">Parametres</string>

    <!-- Activite Menu -->
    <string name="NouvellePartie">Nouvelle Partie</string>
    <string name="descLoupe">Image loupe</string>
    <string name="RechercheJoueurs">Recherche de joueurs</string>
    <string name="LEG">LEG</string>
    <string name="SET">SET</string>
    <string name="SCORE">SCORE</string>

    <!-- Activite Row Item Joueur -->
    <string name="nbPartiesJouees">Nombre de parties jouees</string>
    <string name="descSelectionner">Image Selectionner</string>

    <!-- Activite Historique -->
    <string name="parties_en_cours">Parties en cours :</string>

    <!-- Login -->
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="typeEmailCode">Saisissez le code reçu par email puis saisissez un nouveau mot de passe.</string>
    <string name="SeConnecter">Se connecter</string>
    <string name="CodeEmail">Code reçu par email</string>
    <string name="newPWD">Nouveau mot de passe</string>
    <string name="verifyNewPWD">Confirmation du nouveau mot de passe</string>
    <string name="resetEmail">
        Etes-vous sûr d\'envoyer un mail de réinitialisation de mot de passe à cette adresse email ?
        \n\nSi cette email ne se trouve pas dans la base de données alors vous ne recevrez rien.
        \n\nP.S N\'oublier pas de vérifier vos spams ! </string>
    <string name="changer_d_quipe">Changer d\'équipe</string>
    <string name="changer_d_equipe">changer d\'equipe</string>
    <string name="ajouter_un_robot">Ajouter un Robot</string>
    <string name="d_connection">déconnection</string>
    <string name="nom">Nom</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="supprimer_le_compte">Supprimer le compte</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <!-- Strings used for the spinner of set / Leg / Score -->
    <string-array name="NumSet">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="NumLeg">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="NumScore">
        <item>301</item>
        <item>501</item>
        <item>701</item>
    </string-array>

    <!-- Strings used for the recyclerViewof the partie -->
    <string-array name="joueur_resultat">
        <item>joueur1</item>
        <item>joueur2</item>
    </string-array>

    <string-array setString="set">
        <item>ceci est le nombre de set marqué par le joueur</item>
        <item>ceci est le nombre de set marqué par le joueur</item>
    </string-array>


</resources>